--- a/.github/workflows/dotnet-web-reusable.yml
+++ b/.github/workflows/dotnet-web-reusable.yml
@@ -161,6 +161,8 @@ jobs:
             org.opencontainers.image.description=${{inputs.docker_image_description}}
             org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
+          build-args: |
+            SOURCE_FOLDER=../output/
 
       - name: Create Release
         uses: actions/create-release@v1
