--- a/.github/workflows/dotnet-web-reusable.yml
+++ b/.github/workflows/dotnet-web-reusable.yml
@@ -21,7 +21,7 @@ on:
       sonar_exclusions:
         required: false
         type: string
-        default: ""
+        default: "**Program.cs"
       publish_project:
         required: true
         type: string
