--- a/.github/workflows/dotnet-web-reusable.yml
+++ b/.github/workflows/dotnet-web-reusable.yml
@@ -3,6 +3,14 @@ name: Build and Push Docker Image
 on:
   workflow_call:
     inputs:
+      enable_quality-gates:
+        required: false
+        type: boolean
+        default: true
+      enable_release:
+        required: false
+        type: boolean
+        default: false
       dotnet_version:
         required: false
         type: string
@@ -47,6 +55,8 @@ on:
 
 env:
   BUILD_CONFIGURATION: "Release"
+  SHOULD_RELEASE: ${{ inputs.enable_release == 'true' || (github.ref == 'refs/heads/main' && github.event_name != 'pull_request') }}
+  DOCKERFILE_SOURCE_FOLDER: "output"
 
 defaults:
   run:
@@ -69,10 +79,28 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Print Input Parameters
+        run: |
+          echo "enable_quality-gates=${{ inputs.enable_quality-gates }}"
+          echo "enable_release=${{ inputs.enable_release }}"
+          echo "dotnet_version=${{ inputs.dotnet_version }}"
+          echo "sonar_cloud_organization=${{ inputs.sonar_cloud_organization }}"
+          echo "sonar_cloud_project_key=${{ inputs.sonar_cloud_project_key }}"
+          echo "sonar_coverage_exclusions=${{ inputs.sonar_coverage_exclusions }}"
+          echo "sonar_exclusions=${{ inputs.sonar_exclusions }}"
+          echo "publish_project=${{ inputs.publish_project }}"
+          echo "docker_file=${{ inputs.docker_file }}"
+          echo "docker_hub_repository=${{ inputs.docker_hub_repository }}"
+          echo "docker_image_title=${{ inputs.docker_image_title }}"
+          echo "docker_image_description=${{ inputs.docker_image_description }}"
+
+      - name: Print Environment Variables
+        run: printenv
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: "17" # Set up Java 17, because SonarCloud requires it
+          java-version: "17"
           distribution: "adopt"
 
       - name: Install GitVersion
@@ -84,11 +112,6 @@ jobs:
         uses: gittools/actions/gitversion/execute@v3.1.0
         id: gitversion
 
-      - name: Show FullSemVer
-        uses: gittools/actions/gitversion/command@v3.1.0
-        with:
-          arguments: "/showvariable FullSemVer"
-
       - name: Store FullSemVer
         run: echo "FULL_SEMVER=${{ steps.gitversion.outputs.fullSemVer }}" >> $GITHUB_ENV
 
@@ -98,9 +121,7 @@ jobs:
           dotnet-version: ${{ inputs.dotnet_version }}
 
       - name: Restore NuGet Packages
-        run: |
-          echo "dotnet restore"
-          dotnet restore
+        run: dotnet restore
 
       - name: Cache .NET Core packages
         uses: actions/cache@v4
@@ -111,11 +132,11 @@ jobs:
             ${{ runner.os }}-dotnet-
 
       - name: Install SonarCloud
-        run: |
-          echo "dotnet tool install --global dotnet-sonarscanner"
-          dotnet tool install --global dotnet-sonarscanner
+        if: inputs.enable_quality-gates == 'true'
+        run: dotnet tool install --global dotnet-sonarscanner
 
       - name: Begin SonarCloud Scan
+        if: inputs.enable_quality-gates == 'true'
         run: |
           dotnet sonarscanner begin /o:"${{ inputs.sonar_cloud_organization }}" \
                                   /k:"${{ inputs.sonar_cloud_project_key }}" \
@@ -128,27 +149,26 @@ jobs:
                                   /d:sonar.qualitygate.wait=true
 
       - name: Build Solution
-        run: |
-          echo "dotnet build --no-restore --configuration ${{ env.BUILD_CONFIGURATION }} -p:GeneratePackageOnBuild=false"
-          dotnet build --no-restore --configuration ${{ env.BUILD_CONFIGURATION }} -p:GeneratePackageOnBuild=false
+        run: dotnet build --no-restore --configuration ${{ env.BUILD_CONFIGURATION }} -p:GeneratePackageOnBuild=false
 
       - name: Test Solution
+        if: inputs.enable_quality-gates == 'true'
         run: |
           dotnet test --no-restore --no-build --verbosity normal --configuration ${{ env.BUILD_CONFIGURATION }} \
                   /p:CollectCoverage=true \
                   /p:CoverletOutput=../CoverageResults/ \
                   /p:MergeWith="../CoverageResults/coverage.json" \
-                  /p:CoverletOutputFormat=\"opencover,json\" \
+                  /p:CoverletOutputFormat="opencover,json" \
                   -m:1
 
       - name: End SonarCloud Scan
+        if: inputs.enable_quality-gates == 'true'
         run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish App
-        run: |
-          dotnet publish ${{inputs.publish_project}} --no-build --configuration ${{ env.BUILD_CONFIGURATION }} --output ./../output/
+        run: dotnet publish ${{inputs.publish_project}} --no-build --configuration ${{ env.BUILD_CONFIGURATION }} --output ./../${{env.DOCKERFILE_SOURCE_FOLDER}}/
 
       - name: Login to Docker Hub Registry
         uses: docker/login-action@v3
@@ -157,7 +177,7 @@ jobs:
           password: ${{secrets.DOCKERHUB_TOKEN}}
 
       - name: Build and Push Image to Docker Hub Registry
-        if: steps.gitversion.outputs.CommitsSinceVersionSource > 0
+        if: env.SHOULD_RELEASE == 'true'
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -174,10 +194,10 @@ jobs:
             org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
           build-args: |
-            SOURCE_FOLDER=../output/
+            SOURCE_FOLDER=../${{env.DOCKERFILE_SOURCE_FOLDER}}/
 
       - name: Create Release
-        if: steps.gitversion.outputs.CommitsSinceVersionSource > 0
+        if: env.SHOULD_RELEASE == 'true'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
