--- a/.github/workflows/dotnet-web-reusable.yml
+++ b/.github/workflows/dotnet-web-reusable.yml
@@ -200,6 +200,8 @@ jobs:
             SOURCE_FOLDER=../${{env.DOCKERFILE_SOURCE_FOLDER}}/
 
       - name: Create GitHub Release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create v${{ secrets.GITHUB_TOKEN }} \
             --title "Release ${{ steps.gitversion.outputs.fullSemVer }}" \
