--- a/.github/workflows/dotnet-web-reusable.yml
+++ b/.github/workflows/dotnet-web-reusable.yml
@@ -191,6 +191,15 @@ jobs:
           name: mongodb-migration-artifacts
           path: ${{ github.workspace }}/docs/mongodb/migrations/migrations/
 
+      - name: Upload MongoDB Migration Artifacts to Release
+        if: env.SHOULD_RELEASE == 'true' && env.HAS_MONGODB_MIGRATION == 'true'
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ${{ github.workspace }}/docs/mongodb/migrations/migrations/
+          asset_name: mongodb-migration-artifacts.zip
+          asset_content_type: application/zip
+
       - name: Build and Push Image to Docker Hub Registry
         if: env.SHOULD_RELEASE == 'true'
         uses: docker/build-push-action@v5
