--- a/.github/workflows/dotnet-web-reusable.yml
+++ b/.github/workflows/dotnet-web-reusable.yml
@@ -191,15 +191,6 @@ jobs:
           name: mongodb-migration-artifacts
           path: ${{ github.workspace }}/docs/mongodb/migrations/migrations/
 
-      - name: Upload MongoDB Migration Artifacts to Release
-        if: env.SHOULD_RELEASE == 'true' && env.HAS_MONGODB_MIGRATION == 'true'
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ github.workspace }}/docs/mongodb/migrations/migrations/
-          asset_name: mongodb-migration-artifacts.zip
-          asset_content_type: application/zip
-
       - name: Build and Push Image to Docker Hub Registry
         if: env.SHOULD_RELEASE == 'true'
         uses: docker/build-push-action@v5
@@ -225,3 +216,18 @@ jobs:
         run: |
           gh release create v${{ steps.gitversion.outputs.fullSemVer }} \
             --title "Release ${{ steps.gitversion.outputs.fullSemVer }}"
+
+      - name: Upload MongoDB Migration Artifacts to Release
+        if: env.SHOULD_RELEASE == 'true' && env.HAS_MONGODB_MIGRATION == 'true'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Compress the folder into a zip file
+          zip -r mongodb-migration-artifacts.zip docs/mongodb/migrations/migrations/
+
+          # Get the release tag (assuming it's created earlier in the workflow)
+          RELEASE_TAG=v${{ steps.gitversion.outputs.fullSemVer }}
+
+          # Upload the artifact to the release
+          gh release upload "$RELEASE_TAG" mongodb-migration-artifacts.zip --clobber
+
